Bug 36690 - Contents, header, footer appear outside sheet area in PRINTING preview
Summary: Contents, header, footer appear outside sheet area in PRINTING preview
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.4.0 Beta1
Hardware: x86 (IA32) Windows (All)
: medium normal
Assignee: Kohei Yoshida
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-04-29 10:58 UTC by SURCOUF
Modified: 2011-06-09 09:41 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample file to illustrate (17.36 KB, application/vnd.oasis.opendocument.spreadsheet)
2011-04-29 10:58 UTC, SURCOUF
Details
Test file created under LibO Beta5 (10.46 KB, application/vnd.oasis.opendocument.spreadsheet)
2011-05-19 03:34 UTC, SURCOUF
Details
Test file created under LibO Beta5 (10.46 KB, application/vnd.oasis.opendocument.spreadsheet)
2011-05-19 03:36 UTC, SURCOUF
Details

Note You need to log in before you can comment on or make changes to this bug.
Description SURCOUF 2011-04-29 10:58:51 UTC
Created attachment 46164 [details]
Sample file to illustrate

Hello,

When I tried to have a preview of a file containing some buttons. I get a blinking preview. I just install the Beta3 version of LibO3.4, the problem is the same. I tried the same file with OOo3.4 Beta 1, the preview is OK.
I attached a sample file to illustrate my issue.

Best regards

Bunty
Comment 1 vitriol 2011-04-29 11:10:50 UTC
Preview this document freeze Calc on my system (Win7) with 100% CPU usage. I have to kill the process with task manager...
Comment 2 Rainer Bielefeld Retired 2011-05-15 08:21:59 UTC
[Reproducible] with reporters sample document and "LibreOffice 3.4Beta5  – WIN7  Home Premium  (64bit) German UI [DEV300m103 (Build:5)]":
Butoons and other contents like header, footer, cell background appear outside page preview and then move into page, then again outside ...

I'm astonished that in preview I only see a small area with cell backgrond.

The problem only is visible with more than 1 button, additionally I was not able to reproduce the problem with an own sample document. After I copied / pasted 2 of the buttons from reporter's sample to my sample, I saw the same effect.

@SURCOUF:
Can you contribute a step by step instruction how to create such document from the scratch?

@Kohei
Please feel free to reassign if it's not your area!
Comment 3 SURCOUF 2011-05-19 03:34:48 UTC
Created attachment 46896 [details]
Test file created under LibO Beta5
Comment 4 SURCOUF 2011-05-19 03:36:46 UTC
Created attachment 46897 [details]
Test file created under LibO Beta5

Hello,

Something queer I noticed. When I tried to recreat the bug using LibO beta5, the bug does not appear, even with several buttons (See attached file). I noticed another thing with the file causing the bug (file created under OOo 3.2.1), is when a print area isnot defined, the previex can stop blinking.

STEPS:

- choose a cell
- Insert - link - inside the document - choose "button" from dropdown menu - apply
- Select print zone
- preview

Hope that my explanation will help.

Bunty
Comment 5 Kohei Yoshida 2011-05-19 21:23:23 UTC
This race condition during print preview gets triggered only when the button uses colors judging by how the code is written.
Comment 6 Michael Meeks 2011-05-20 03:34:17 UTC
updated patch submitted to 3-4 branch already, and pending two more dev reviews to get into 3.4.0.